[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/HUD/misc_sheet.png" type="Texture" id=1]
[ext_resource path="res://Objects/GroundButton.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "Pressed",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "Unpressed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.01, 0.75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 3 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1, 3 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1, 0.5 )

[node name="GroundButton" type="StaticBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0185814, -11.9628 )
frames = SubResource( 3 )
animation = "Unpressed"

[node name="UnpressedCollision" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -12 )
polygon = PoolVector2Array( -8, 12, -6, 8, 6, 8, 8, 12 )

[node name="PressedCollision" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -12 )
polygon = PoolVector2Array( -8, 12, -6, 9, 6, 9, 8, 12 )
disabled = true

[node name="PressDetector" type="Area2D" parent="."]
position = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressDetector"]
position = Vector2( 0, 8.23597 )
shape = SubResource( 4 )

[node name="LeftSlopeDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSlopeDetector"]
position = Vector2( -6.98706, -2.99632 )
shape = SubResource( 5 )

[node name="RightSlopeDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSlopeDetector"]
position = Vector2( 6.9999, -3.02002 )
shape = SubResource( 6 )

[node name="MidSlopeDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidSlopeDetector"]
position = Vector2( 0, -7.5 )
shape = SubResource( 7 )

[connection signal="body_entered" from="PressDetector" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="PressDetector" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="LeftSlopeDetector" to="." method="_on_LeftSlopeDetector_body_entered"]
[connection signal="body_exited" from="LeftSlopeDetector" to="." method="_on_LeftSlopeDetector_body_exited"]
[connection signal="body_entered" from="RightSlopeDetector" to="." method="_on_RightSlopeDetector_body_entered"]
[connection signal="body_exited" from="RightSlopeDetector" to="." method="_on_RightSlopeDetector_body_exited"]
[connection signal="body_entered" from="MidSlopeDetector" to="." method="_on_MidSlopeDetector_body_entered"]
[connection signal="body_exited" from="MidSlopeDetector" to="." method="_on_MidSlopeDetector_body_exited"]
